--- a/.github/ISSUE_TEMPLATE/improvement.yml
+++ b/.github/ISSUE_TEMPLATE/improvement.yml
@@ -52,6 +52,22 @@ body:
     validations:
       required: true
 
+  - type: textarea
+    id: acceptance
+    attributes:
+      label: Acceptance Criteria
+      description: How do we know this is done? Include test requirements.
+      placeholder: |
+        - [ ] Feature works as described
+        - [ ] Tests added/updated
+        - [ ] Smoke test passes
+      value: |
+        - [ ] 
+        - [ ] Tests added/updated
+        - [ ] Smoke test passes
+    validations:
+      required: true
+
   - type: checkboxes
     id: ready
     attributes:
@@ -61,5 +77,5 @@ body:
         - label: Task is well-defined
         - label: No blocking dependencies
         - label: Implementation approach is clear
-        - label: Acceptance criteria are clear
+        - label: Acceptance criteria include test requirements
 
