feat: add structured logging with zerolog
- Add zerolog dependency for structured JSON logging
- Create logger package with LOG_LEVEL environment variable support
- Replace all log.Printf/Println/Fatal calls with structured logging
- Add structured HTTP request logging middleware with safe type assertions
- Create zerolog adapter for cron scheduler
- Add comprehensive unit tests for logger package
- Document LOG_LEVEL in env.example

Closes #3

--- a/env.example
+++ b/env.example
@@ -46,7 +46,10 @@ HOME_SERVER_USER=backup-user
 # ===========================================
 # DEVELOPMENT SETTINGS
 # ===========================================
-# Set to 'true' to enable debug logging
+# Log level: trace, debug, info, warn, error, fatal, panic
+LOG_LEVEL=info
+
+# Set to 'true' to enable debug logging (deprecated, use LOG_LEVEL instead)
 DEBUG=false
 
 # Set to 'true' to enable CORS for all origins (dev only)
