feat: standardize environment file naming to .env.example.* pattern
- Rename env files to .env.example.* for clarity
- Update Makefile targets to use new naming
- Update all documentation references
- Update infrastructure scripts
- Add frontend/.env.example to git
- This makes it explicit that these are templates, not actual configs

Part of #18 (naming standardization)

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,18 @@
 # ===========================================
 # ENVIRONMENT & SECRETS
 # ===========================================
+# Gitignore all .env files (they contain secrets)
 .env
 .env.local
 .env.production
 .env.staging
 .env.*.local
+
+# BUT allow .env.example files (these are templates)
+!.env.example
+!.env.*.example
+
+# Other secrets
 *.key
 *.pem
 *.p12
@@ -322,9 +329,3 @@ desktop-ui/dist
 desktop/src-tauri/target
 desktop/src-tauri/target/release/bundle
 
-# ===========================================
-# TEMPORARY PLANNING DOCUMENTS
-# ===========================================
-# IMPROVEMENTS.md is a temp file used to bootstrap GitHub Issues
-# Don't commit it - use GitHub Issues as source of truth
-IMPROVEMENTS.md
