feat: expand environment templates with complete configuration
- Expand .env.example.production from 22 to 92 lines
- Expand .env.example.staging from 22 to 90 lines
- Expand .env.example.testing from 22 to 90 lines
- All templates now include complete configuration settings
- Prevents configuration loss when switching environments with make commands

This completes the fix for issue #18 by ensuring each environment
template is self-contained with all necessary settings, not just
a minimal subset.

Closes #18

--- a/.env.example.production
+++ b/.env.example.production
@@ -1,22 +1,92 @@
 # Production Environment - Real-world cadences
-CRM_ENV=production
-DATABASE_URL=postgres://crm_user:crm_password@localhost:5432/personal_crm?sslmode=disable
-GIN_MODE=release
+# Copy this file to .env and customize with your actual secrets
 
-# Database settings for production
+# ===========================================
+# DATABASE CONFIGURATION
+# ===========================================
+DATABASE_URL=postgres://crm_user:crm_password@localhost:5432/personal_crm?sslmode=disable
+
+# Docker Compose database settings
+POSTGRES_DB=personal_crm
 POSTGRES_USER=crm_user
 POSTGRES_PASSWORD=crm_password
-POSTGRES_DB=personal_crm
 POSTGRES_PORT=5432
 
-# Production settings
+# ===========================================
+# API SERVER CONFIGURATION
+# ===========================================
+PORT=8080
+NODE_ENV=production
+GIN_MODE=release
+
+# ===========================================
+# CRM ENVIRONMENT
+# ===========================================
+CRM_ENV=production
+
+# ===========================================
+# AUTHENTICATION & SESSION
+# ===========================================
+# IMPORTANT: Generate secure secrets for production!
+# SESSION_SECRET: openssl rand -base64 32
+# API_KEY: openssl rand -hex 32
+SESSION_SECRET=dev-session-secret-change-in-production-12345
+API_KEY=dev-api-key-change-in-production
+
+# ===========================================
+# AI & EMBEDDINGS
+# ===========================================
+# Get your API key from https://console.anthropic.com/
+ANTHROPIC_API_KEY=your-anthropic-api-key-here
+
+# ===========================================
+# TELEGRAM BOT (OPTIONAL)
+# ===========================================
+# Get bot token from @BotFather on Telegram
+TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here
+
+# ===========================================
+# BACKUP CONFIGURATION
+# ===========================================
+BACKUP_PATH=/path/to/your/backup/directory
+HOME_SERVER_HOST=your-home-server.local
+HOME_SERVER_USER=backup-user
+
+# ===========================================
+# PRODUCTION SETTINGS
+# ===========================================
+# Log level: warn for production (less verbose)
 LOG_LEVEL=warn
+
+# Set to 'false' to enable debug logging (deprecated, use LOG_LEVEL instead)
+DEBUG=false
+
+# CORS: Set to false in production, configure FRONTEND_URL instead
+CORS_ALLOW_ALL=false
+
+# Frontend URL for CORS configuration
+FRONTEND_URL=http://localhost:3000
+
+# ===========================================
+# SCHEDULER CONFIGURATION
+# ===========================================
 SCHEDULER_ENABLED=true
 SCHEDULER_CRON="0 8 * * *"  # Run daily at 8 AM
 
-# Reminder cadences (real-world timing)
-# Weekly = 7 days
-# Monthly = 30 days
-# Quarterly = 90 days  
-# Biannual = 180 days
-# Annual = 365 days
+# ===========================================
+# FEATURE FLAGS
+# ===========================================
+# Enable experimental features
+ENABLE_VECTOR_SEARCH=false
+ENABLE_TELEGRAM_BOT=false
+ENABLE_CALENDAR_SYNC=false
+
+# ===========================================
+# REMINDER CADENCES
+# ===========================================
+# Production uses real-world timing:
+# - Weekly cadence: 7 days
+# - Monthly cadence: 30 days
+# - Quarterly cadence: 90 days
+# - Biannual cadence: 180 days
+# - Annual cadence: 365 days
