--- a/.env.example.testing
+++ b/.env.example.testing
@@ -1,22 +1,90 @@
 # Testing Environment - Ultra-fast cadences for immediate validation
-CRM_ENV=testing
-DATABASE_URL=postgres://crm_user:crm_password@localhost:5432/crm_test?sslmode=disable
-GIN_MODE=debug
+# Copy this file to .env for rapid testing
 
-# Database settings for testing
+# ===========================================
+# DATABASE CONFIGURATION
+# ===========================================
+DATABASE_URL=postgres://crm_user:crm_password@localhost:5432/crm_test?sslmode=disable
+
+# Docker Compose database settings
+POSTGRES_DB=crm_test
 POSTGRES_USER=crm_user
 POSTGRES_PASSWORD=crm_password
-POSTGRES_DB=crm_test
 POSTGRES_PORT=5432
 
-# Testing-specific settings
+# ===========================================
+# API SERVER CONFIGURATION
+# ===========================================
+PORT=8080
+NODE_ENV=testing
+GIN_MODE=debug
+
+# ===========================================
+# CRM ENVIRONMENT
+# ===========================================
+CRM_ENV=testing
+
+# ===========================================
+# AUTHENTICATION & SESSION
+# ===========================================
+# Use dev values for testing
+SESSION_SECRET=dev-session-secret-change-in-production-12345
+API_KEY=dev-api-key-change-in-production
+
+# ===========================================
+# AI & EMBEDDINGS
+# ===========================================
+# Get your API key from https://console.anthropic.com/
+ANTHROPIC_API_KEY=your-anthropic-api-key-here
+
+# ===========================================
+# TELEGRAM BOT (OPTIONAL)
+# ===========================================
+# Get bot token from @BotFather on Telegram
+TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here
+
+# ===========================================
+# BACKUP CONFIGURATION
+# ===========================================
+BACKUP_PATH=/path/to/your/backup/directory
+HOME_SERVER_HOST=your-home-server.local
+HOME_SERVER_USER=backup-user
+
+# ===========================================
+# TESTING SETTINGS
+# ===========================================
+# Log level: debug for testing (maximum verbosity)
 LOG_LEVEL=debug
+
+# Set to 'false' to enable debug logging (deprecated, use LOG_LEVEL instead)
+DEBUG=false
+
+# CORS: Allow all for testing
+CORS_ALLOW_ALL=true
+
+# Frontend URL for CORS configuration
+FRONTEND_URL=http://localhost:3000
+
+# ===========================================
+# SCHEDULER CONFIGURATION
+# ===========================================
 SCHEDULER_ENABLED=true
 SCHEDULER_CRON="*/30s"  # Run every 30 seconds for testing
 
-# Reminder cadence overrides (handled in code based on CRM_ENV)
-# Weekly = 2 minutes
-# Monthly = 10 minutes  
-# Quarterly = 30 minutes
-# Biannual = 1 hour
-# Annual = 2 hours
+# ===========================================
+# FEATURE FLAGS
+# ===========================================
+# Can enable features for testing
+ENABLE_VECTOR_SEARCH=false
+ENABLE_TELEGRAM_BOT=false
+ENABLE_CALENDAR_SYNC=false
+
+# ===========================================
+# REMINDER CADENCES
+# ===========================================
+# Testing uses ultra-fast timing (handled in code based on CRM_ENV):
+# - Weekly cadence: 2 minutes
+# - Monthly cadence: 10 minutes
+# - Quarterly cadence: 30 minutes
+# - Biannual cadence: 1 hour
+# - Annual cadence: 2 hours
