feat: Add GitHub Actions CI workflow (#10)
Implements cloud-based testing for PRs and main branch:
- Backend unit tests (Go with -short flag)
- Backend integration tests (with PostgreSQL service container)
- Frontend lint and build verification
- ARM64 cross-compilation test to catch Pi compatibility issues

Files added:
- .github/workflows/ci.yml - Main CI workflow

Files modified:
- Makefile - Add CI targets (ci-build-backend, ci-build-frontend, ci-test)
- .gitignore - Add CI/CD directories
- README.md - Add CI status badge

This enables automated testing before merge while maintaining manual
deployment to Raspberry Pi via the existing deployment guide.

--- a/.gitignore
+++ b/.gitignore
@@ -291,6 +291,13 @@ benchmark/
 *.pprof
 
 # ===========================================
+# CI/CD
+# ===========================================
+# GitHub Actions runner (for self-hosted runners)
+actions-runner/
+_work/
+
+# ===========================================
 # DOCUMENTATION BUILDS
 # ===========================================
 # Generated documentation
