fix: use golangci-lint v2 config format for CI

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,8 +1,8 @@
 # golangci-lint configuration for Personal CRM
+version: "2"
+
 run:
   timeout: 5m
-  tests: false  # Don't lint test files by default
-  modules-download-mode: readonly
 
 issues:
   exclude-dirs:
