fix: update golangci-lint config to v2 format

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,11 +4,6 @@ version: "2"
 run:
   timeout: 5m
 
-issues:
-  exclude-dirs:
-    - vendor
-    - node_modules
-
 linters:
   enable:
     - forbidigo  # Forbid specific function calls
@@ -16,13 +11,12 @@ linters:
     - goimports  # Imports formatting
     - govet      # Go vet
     - errcheck   # Check error handling
-
-linters-settings:
-  forbidigo:
-    forbid:
-      - p: 'time\.Now\(\)'
-        msg: 'use accelerated.GetCurrentTime() instead of time.Now() for time acceleration support'
-    # Legitimate exceptions use inline //nolint:forbidigo comments:
-    # - backend/internal/accelerated/time.go (wrapper implementation)
-    # - backend/internal/api/middleware.go (latency measurement)
-    # - backend/internal/api/handlers/system.go:83 (TIME_BASE setting)
+  settings:
+    forbidigo:
+      forbid:
+        - pattern: 'time\.Now\(\)'
+          msg: 'use accelerated.GetCurrentTime() instead of time.Now() for time acceleration support'
+      # Legitimate exceptions use inline //nolint:forbidigo comments:
+      # - backend/internal/accelerated/time.go (wrapper implementation)
+      # - backend/internal/api/middleware.go (latency measurement)
+      # - backend/internal/api/handlers/system.go:83 (TIME_BASE setting)
