feat: add multi-method contact info with primary selection
Introduce contact_method table and sqlc queries, update contact/repository/service/handlers to support multiple methods, primary selection, validation, normalization, and search across method values. Seed data and tests updated for new shape, and reminder queries now include primary method details. Add helper for search integration tests and set workspace-local GOCACHE.

Tests: make test (integration requires DATABASE_URL + running DB)

--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,9 @@ backend/*.dylib
 # Go modules
 # Note: go.sum should be committed for applications (not ignored)
 
+# Go build cache (workspace-local)
+.gocache/
+
 # Test coverage
 backend/coverage.out
 backend/coverage.html
@@ -335,4 +338,3 @@ desktop-ui/node_modules
 desktop-ui/dist
 desktop/src-tauri/target
 desktop/src-tauri/target/release/bundle
-
