--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, chore/add-e2e-ci ]  # TEMP: added chore branch for testing
 
 jobs:
   backend-tests:
